# kstd

./: Cargo.toml  README.md  run_kernel.sh
.cargo/: config.toml
macros/: Cargo.toml
macros/src/: lib.rs
thek/: Cargo.toml
thek/src/: lib.rs
thek/src/arch/x86_64/: mod.rs
thek/src/controllers/: mod.rs
thek/src/controllers/console/: macros.rs  mod.rs  screen.rs
thek/src/controllers/plot/: mod.rs
thek/src/controllers/plot/text/: controller.rs  mod.rs
thek/src/controllers/port/: controller.rs  mod.rs
thek/src/controllers/stdout/: controller.rs  mod.rs
thek/src/controllers/text/: ansi.rs  controller.rs  mod.rs
thek/src/cpu/: mod.rs  time.rs
thek/src/cpu/arch/: mod.rs
thek/src/cpu/arch/x86_64/: mod.rs
thek/src/devices/: interface.rs  mod.rs
thek/src/devices/com/: mod.rs
thek/src/devices/com/port/: mod.rs  uart.rs
thek/src/devices/com/port/arch/: mod.rs
thek/src/devices/com/port/arch/pc/: mod.rs  uart.rs
thek/src/devices/generic/: mod.rs
thek/src/devices/keyset/: mod.rs
thek/src/devices/network/: mod.rs
thek/src/devices/plot/text/: device.rs  mod.rs  screen.rs
thek/src/devices/port/: mod.rs
thek/src/devices/port/uart/: mod.rs
thek/src/devices/port/uart/arch/: mod.rs
thek/src/devices/storage/: mod.rs
thek/src/devices/text/: ansi.rs  mod.rs
thek/src/devices/text/arch/: mod.rs
thek/src/devices/text/arch/pc/: device.rs  mod.rs
thek/src/mem/: globalloc.rs  init.rs  kbox.rs  layout.rs  mod.rs
thek/src/mem/arch/: mod.rs
thek/src/sys/: defs.rs  error.rs  mod.rs  mutex.rs
thek/src/task/: mod.rs  scheduler.rs  time.rs
(+48 files in other folders)
