[package]
name = "macros"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.81", default-features = true, features = ["full", "extra-traits", "visit"] }
quote = "1.0.10"
walkdir = "2"
proc-macro2 = "1.0.32"
