[package]
name = "thek"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
hashbrown = "0.11"
macros = { path = "../macros" }
x86_64 = { version = "0.14.6" , optional = true }

[features]
default = ["pc64"]

pc64 = ["x86_64"]
